--- a/TCPModbusClientExample/TCPModbusClientExample.csproj
+++ b/TCPModbusClientExample/TCPModbusClientExample.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EasyModbus">
+      <HintPath>..\..\DLL\EasyModbus\EasyModbus\bin\Debug\EasyModbus.dll</HintPath>
+    </Reference>
     <Reference Include="ModbusTCP">
       <HintPath>..\..\DLL\ModbusTCP\ModbusTCP\bin\Debug\ModbusTCP.dll</HintPath>
     </Reference>
@@ -59,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
